[package]
name = "pusher"
version = "0.4.0"
authors = ["Jamie Patel <jamie@pusher.com>"]
description = "The Rust library for interacting with the Pusher HTTP API."
repository = "http://github.com/pusher/pusher-http-rust"
readme = "README.md"
license = "MIT"
keywords = ["realtime", "websockets", "pusher"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2018"

[badges]
travis-ci = { repository = "pusher-community/pusher-http-rust", branch = "master" }

[lib]
name = "pusher"
path = "src/lib.rs"

[[example]]
name = "auth_server"
path = "examples/auth_server.rs"

[dependencies]
bytes = "0.5"
hex = "0.4"
hyper = "0.13"
regex = "1.3"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

[dev-dependencies]
log = "0.4" # log macros are used within yup-hyper-mock
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
yup-hyper-mock = "4.0.0"
