[package]
name = "pusher"
version = "0.4.3"
authors = ["Jamie Patel <jamie@pusher.com>"]
description = "The Rust library for interacting with the Pusher HTTP API."
repository = "http://github.com/pusher/pusher-http-rust"
readme = "README.md"
license = "MIT"
keywords = ["realtime", "websockets", "pusher"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2018"

[badges]
travis-ci = { repository = "pusher-community/pusher-http-rust", branch = "master" }

[lib]
name = "pusher"
path = "src/lib.rs"

[[example]]
name = "auth_server"
path = "examples/auth_server.rs"

[dependencies]
bytes = "1.0"
hex = "0.4"
hyper = { version = "0.14", features = ["server"] }
regex = "1.5"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"

[dev-dependencies]
log = "0.4" # log macros are used within yup-hyper-mock
tokio = { version = "1.8", features = ["macros", "rt"] }
yup-hyper-mock = "5.14"
